v0.0.1 added liveness probe docs generated client by swagger
